Refactor duplicated code in PgUserStreakManager